examples/test/testpolicy11309.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11309
  namespace: namespace336
spec:
  podSelector:
    matchLabels:
      key47: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value44
          key45: value49
          key21: value0
      podSelector:
        matchLabels:
          key39: value31
          key28: value9
          key10: value16
